test/ingress-test/nginx-tomcat/ingress-nginx-tomcat.yaml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress                       
metadata:
  name: ingress-nginx-tomcat
  namespace: nh-name
spec:       
  ingressClassName: nginx                 
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/intra"
        backend:                  
          service:
            name: service-nginx-tomcat
            port: 
              number: 80
