test/ingress-test/nginx-tomcat/service-nginx-tomcat.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-nginx-tomcat
  namespace: nh-name
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 4140
  selector:
    app: nginx-tomcat
